[metadata]
name = reverse-shell-tool
version = 1.0.2
description = Reverse Shell Tool
author = MustansirG
author_email = me@mustansirg.in
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
include_package_data = True
packages = rst
install_requires =
    keyboard==0.13.5
    netifaces==0.10.9
    pyngrok==5.1.0
    pyperclip==1.8.0
    pytest
    rich==12.2.0
    setuptools==52.0.0
    simple_term_menu==1.4.1

[options.entry_points]
console_scripts =
    rst = rst.rst:main

[options.extras_require]
testing =
    pytest
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage-badge
    python-coveralls
    pyyaml
    black==22.3.0
    pyperclip

[flake8]
max-line-length = 160

[options.package_data]
slapping = py.typed
